
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_port; int fd; int events; int revents; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct pollfd {int sin_port; int fd; int events; int revents; TYPE_1__ sin_addr; int sin_family; } ;
typedef int s_in ;
typedef int pfd ;


 int AF_INET ;
 int INADDR_ANY ;
 int IPPROTO_TCP ;
 int POLLERR ;
 int POLLHUP ;
 int POLLIN ;
 int POLLNVAL ;
 int SOCK_STREAM ;
 int accept (int,struct sockaddr_in*,int*) ;
 scalar_t__ bind (int,struct sockaddr*,int) ;
 int bind_addr ;
 int bindport ;
 int bindshell (int) ;
 int close (int) ;
 int errno ;
 int fatal (char*,...) ;
 int fprintf (int ,char*,...) ;
 int htons (int) ;
 char* inet_ntoa (TYPE_1__) ;
 int listen (int,int) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int poll (struct sockaddr_in*,int,int) ;
 int socket (int ,int ,int ) ;
 int stderr ;
 int strerror (int ) ;
 scalar_t__ use_bind_addr ;

__attribute__((used)) static void
snmp_waiting_connect (void)
{
 int sd, val, fsd, slen;
 struct sockaddr_in s_in;
 struct pollfd pfd;

 if ((sd = socket (AF_INET, SOCK_STREAM, IPPROTO_TCP)) < 0)
  fatal ("socket(): %s\n", strerror (errno));

 memset (&s_in, 0, sizeof (s_in));
 s_in.sin_family = AF_INET;
 s_in.sin_addr.s_addr = (use_bind_addr ? bind_addr : INADDR_ANY);
 s_in.sin_port = htons (bindport);

 if (bind (sd, (struct sockaddr *) &s_in, sizeof (s_in)) < 0)
  fatal ("bind(): %s\n", strerror (errno));

 listen (sd, 5);

 fprintf (stderr, "awaiting connection from client...\n");

 memset (&pfd, 0, sizeof (pfd));
 pfd.fd = sd;
 pfd.events = POLLIN;

 if ((val = poll (&pfd, 1, 20 * 1000)) < 0)
  fatal ("poll(): %s\n", strerror (errno));

 if (val < 1 || pfd.revents & (POLLERR | POLLNVAL | POLLHUP) || !(pfd.revents & POLLIN))
  fatal ("no connection from client in 20 seconds. aborting\n");

 memset (&s_in, 0, sizeof (s_in));
 slen = sizeof (s_in);
 fsd = accept (sd, &s_in, &slen);
 close (sd);

 if (fsd < 0)
  fatal ("accept(): %s\n", strerror (errno));

 fprintf (stderr, "received connection from %s:%i\n",
   inet_ntoa (s_in.sin_addr),
   htons (s_in.sin_port));

 bindshell (fsd);
}
